fixing the gap

--- a/Sub/Designers Culture/Designers.css
+++ b/Sub/Designers Culture/Designers.css
@@ -235,7 +235,7 @@ em {
 .bigrightdiv {
 	display: flex;
 	flex-direction: row;
-	gap: 8px;
+	gap: 10px;
 
 	padding: 0px 10px 0px 10px;
 
@@ -256,7 +256,9 @@ em {
 	width: 100%;
 	max-height: 100%;
 	object-fit: cover;
+	padding-bottom: 6px;
 }
+
 
 /* see if overflow is working */
 h1 {
